Fix MediaPlayerRenderer error propagation

The detection of HLS by the demuxer is propagated through the pipeline
via a special error code. This error code is saved by RendererWrapper,
and never reset. RW does not propagate errors when it is already has an
error status. This means that HLS errors are never fully reported to the
pipeline.

This CL fixes the issue by reseting RendererWrapper's status on stop.
This makes the comments above |status_| accurate again.

The CL also fixes a bug in MediaPlayerRenderer, where
MEDIA_ERROR_FORMAT errors are dropped, and MEDIA_ERROR_INVALID_CODE
errors are propagated.

Test: manual tests, added UT
Bug: 812465
Change-Id: I281d90104c8f9cb879e90c6d31a99167991c06ab
Reviewed-on: https://chromium-review.googlesource.com/920881
Commit-Queue: Thomas Guilbert <tguilbert@chromium.org>
Reviewed-by: Dale Curtis <dalecurtis@chromium.org>
Cr-Commit-Position: refs/heads/master@{#537407}
Former-commit-id: 903cf4d0ee65f8f649c01f6417d6d7cd4ca2d1ab